# learndynaconf

./: .gitpod.yml  .replit  .secrets.toml  README.md  config.py  default_settings.toml  main.py  pyproject.toml  requirements.txt  settings.toml
configs/: .env  .secrets.toml  default_settings.toml  settings.toml
envfile/: .env
